--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -707,15 +707,15 @@ command.subsystem.*.csd=0
 # If other libraries turn out to be needed just stick them on the link line here.
 
 command.name.0.*=Build C++ piece
-command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm
+command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm
 command.name.1.*=Render C++ piece to audio
-command.1.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --audio PortAudio --device dac
+command.1.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --audio PortAudio --device dac
 command.name.2.*=Render C++ piece to soundfile
-command.2.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm && ./$(FileName) --csound 
+command.2.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm && ./$(FileName) --csound 
 command.name.3.*=Render C++ piece to soundfile and post-process
-command.3.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post
+command.3.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post
 command.name.4.*=Render C++ piece to soundfile and post-process and play 
-command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav audacity
+command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav audacity
 
 # Custom commands for building a C++ plugin opcode for Csound.
 # Each plugin must be one C++ file; this is not much of a limitation.
