Updating build and build instructions for initial builds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,7 +112,7 @@ option(BUILD_WIIMOTE_OPCODES "Build the Wiimote opcodes" ON)
 # targets.
 
 find_package(Csound REQUIRED)
-find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+find_package(Eigen3 REQUIRED NO_MODULE)
 find_package(FLTK REQUIRED NO_MODULE)
 #message("FLTK_USE_FILE: ${FLTK_USE_FILE}")
 #include(${FLTK_USE_FILE})
@@ -128,11 +128,11 @@ find_package(LUAJIT)
 find_package(OpenCV REQUIRED)
 find_package(PORTSMF)
 find_package(PNG)
-find_package(PythonLibs 2.7)
+find_package(PythonLibs 3)
 find_package(SWIG)
 include(UseSWIG)
-find_package(Qt5 COMPONENTS Core Widgets REQUIRED PATHS "~/Qt/5.10.0/gcc_64/lib/cmake/Qt5" CONFIGS "Qt5Config.cmake")
-find_package(Qt5 COMPONENTS Core Widgets REQUIRED HINTS "~/Qt/5.10.0")
+###find_package(Qt5 COMPONENTS Core Widgets REQUIRED PATHS "~/Qt/5.10.0/gcc_64/lib/cmake/Qt5" CONFIGS "Qt5Config.cmake")
+###find_package(Qt5 COMPONENTS Core Widgets REQUIRED HINTS "~/Qt/5.10.0")
 find_package(STK)
 find_package(SWIG)
 find_package(ZLIB)
@@ -245,13 +245,13 @@ if(NOT DISTRO_CODENAME)
   endif()
 endif()
 
-set(CPACK_COMPONENTS_ALL csound-base csound-html5 csound-node csound-cmask csound-luajit csound-bformdec2 csound-mverb)
+set(CPACK_COMPONENTS_ALL csound-base csound-node csound-cmask csound-luajit csound-bformdec2 csound-mverb)
 set(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE "OFF")
 set(CPACK_GENERATOR TGZ; DEB)
 set(CPACK_PACKAGE_CONTACT "${CPACK_DEBIAN_PACKAGE_MAINTAINER}")
 set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README.md")
 set(CPACK_PACKAGE_NAME "csound-extended-dev")
-set(CPACK_PACKAGE_VERSION "1.3.6")
+set(CPACK_PACKAGE_VERSION "1.3.7")
 # set(CPACK_STRIP_FILES "YES")
 
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/copyright.txt")
@@ -277,9 +277,11 @@ set(CPACK_DEBIAN_PACKAGE_LICENSE "${CMAKE_SOURCE_DIR}/copyright.txt")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Michael Gogins <michael.gogins@gmail.com>")
 set(CPACK_DEBIAN_PACKAGE_NAME "${CPACK_PACKAGE_NAME}")
 set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
+# For your first build on your system, set this to "OFF", then rebuild with it "ON"
+# to handle a bug with shlibdeps.
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS "ON")
 set(CPACK_DEBIAN_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION}")
-
+set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS "ON")
 # generate a Debian compliant changelog
 string(TIMESTAMP RFC2822_TIMESTAMP "%a, %d %b %Y %H:%M:%S -0400" UTC)
 set(CHANGELOG_HEADER "csound-extended-dev (${CPACK_PACKAGE_VERSION}) ${DISTRO_CODENAME}\; urgency=high")
