--- a/Opcodes/LuaCsound/CMakeLists.txt
+++ b/Opcodes/LuaCsound/CMakeLists.txt
@@ -29,6 +29,7 @@ cmake_minimum_required(VERSION 3.5)
 set(CMAKE_CXX_STANDARD 11)
 if(NOT APPLE)
   check_deps(BUILD_LUA_OPCODES LUAJIT_LIBRARY LUAJIT_INCLUDE_DIRS)
+  message(STATUS "LuaJIT include dirs: " ${LUAJIT_INCLUDE_DIRS})
   if(BUILD_LUA_OPCODES)
     make_plugin(lua_opcodes LuaCsound.cpp ${LUAJIT_LIBRARY})
     target_compile_options(lua_opcodes PRIVATE ${OpenMP_CXX_FLAGS})
