--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ project(csound-extended)
 
 include(ExternalProject)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wall")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
 set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
@@ -46,11 +46,6 @@ set(ALLOW_DUPLICATE_CUSTOM_TARGETS "Yes")
 add_definitions(-DUSE_DOUBLE)
 set(USE_DOUBLE "Yes")
 configure_file(${CMAKE_SOURCE_DIR}/dependencies/csound/include/float-version.h.in ${CMAKE_CURRENT_BINARY_DIR}/float-version.h)
-set(QT_INSTALL_PREFIX "/usr")
-##set(CSOUND_INCLUDE_PATH "${CMAKE_SOURCE_DIR}/dependencies/csound/include")
-message(STATUS "CSOUND_INCLUDE_PATH: ${CSOUND_INCLUDE_PATH}")
-set(VSTSDK2X_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/dependencies/VST_SDK/VST2_SDK")
-message(STATUS "VSTSDK2X_INCLUDE_DIR: ${VSTSDK2X_INCLUDE_DIR}")
 set(BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})
 set(BUILD_PLUGINS_DIR ${BUILD_DIR})
 set(BUILD_BIN_DIR ${BUILD_DIR})
@@ -87,7 +82,7 @@ option(BUILD_FRAMEBUFFER_OPCODES "Build the framebuffer opcodes" ON)
 option(BUILD_IMAGE_OPCODES "Build the image opcodes" ON)
 option(BUILD_JACK_OPCODES "Build the Jack related opcodes" ON)
 option(BUILD_LINEAR_ALGEBRA_OPCODES "Build the linear algebra opcodes" ON)
-option(BUILD_LUA_OPCODES "Build the Lua opcodes" ON)
+option(BUILD_LUA_OPCODES "Build the Lua opcodes" OFF)
 option(BUILD_OSC_OPCODES "Build the OSC Opcodes" ON)
 option(BUILD_P5GLOVE_OPCODES "Build the P5Glove opcodes" ON)
 option(BUILD_PADSYNTH_OPCODES "Build the Padsynth opcode" ON)
@@ -124,15 +119,12 @@ find_package(Java)
 find_package(JNI)
 find_package(LIBLO)
 find_package(LLVM)
-find_package(LUAJIT)
 find_package(OpenCV REQUIRED)
 find_package(PORTSMF)
 find_package(PNG)
 find_package(PythonLibs 3)
 find_package(SWIG)
 include(UseSWIG)
-###find_package(Qt5 COMPONENTS Core Widgets REQUIRED PATHS "~/Qt/5.10.0/gcc_64/lib/cmake/Qt5" CONFIGS "Qt5Config.cmake")
-###find_package(Qt5 COMPONENTS Core Widgets REQUIRED HINTS "~/Qt/5.10.0")
 find_package(STK)
 find_package(SWIG)
 find_package(ZLIB)
@@ -214,7 +206,6 @@ add_custom_target(doxygen_reference
 # add_subdirectory(dependencies)
 
 add_subdirectory(Opcodes/cmask)
-add_subdirectory(Opcodes/LuaCsound)
 add_subdirectory(Opcodes/bformdec2)
 add_subdirectory(Opcodes/MVerb)
 add_subdirectory(CsoundAC)
@@ -265,7 +256,7 @@ set(CPACK_DEBIAN_PACKAGE_DEPENDS "python")
 set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Extends the sound programming language
  and library Csound. Additional features include the CsoundAC library for
  algorithmic composition, the cmask opcode for algorithmic composition
- and granular synthesis, the LuaJIT opcodes, the Common Music and nudruz libraries
+ and granular synthesis, the Common Music and nudruz libraries
  for algorithmic composition, csound.node to run Csound in the JavaScript
  context of NW.js, csound-wasm to run Csound in the JavaScript context of Web
  browsers, and others.")
