Improved auto configuration (#115).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,7 +122,8 @@ find_package(LLVM)
 find_package(OpenCV REQUIRED)
 find_package(PORTSMF)
 find_package(PNG)
-find_package(PythonLibs 3)
+find_package(PythonInterp)
+find_package(PythonLibs)
 find_package(SWIG)
 include(UseSWIG)
 find_package(STK)
