Fixed bugs in Scrims for node.

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -699,8 +699,8 @@ comment.block.csound=;
 command.go.*.inc=python /home/mkg/csound-extended/silencio/patches/hear_patch.py $(FileName) 
 command.go.subsystem.*.inc=0
 
-command.go.*.csd=csound "$(FilePath)"
-command.subsystem.*.csd=0
+command.go.*.csd=csound "$(FilePath)" -+msg_color=0
+command.subsystem.*.csd=2
 
 # Custom commands for building and running a Csound piece written in C++.
 # Each piece must be one C++ file; this is not much of a limitation.
@@ -731,11 +731,11 @@ command.6.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/
 # of the csd filename, with - or _ replaced by spaces, is the title of the piece.
 
 command.name.7.*=Render csd piece to audio
-command.7.*=csound "$(FilePath)" -odac
+command.7.*=csound "$(FilePath)" -odac -+msg_color=0
 command.name.8.*=Render csd piece to soundfile and play
-command.8.*=csound "$(FilePath)" -o$(FilePath).wav && audacity $(FilePath).wav
+command.8.*=csound "$(FilePath)" -o$(FilePath).wav -+msg_color=0 && audacity $(FilePath).wav
 command.name.9.*=Render csd piece to soundfile and post-process and play 
-command.9.*=csound "$(FilePath)" -o$(FilePath).wav && python /home/mkg/csound-extended/post-process.py $(FilePath).wav
+command.9.*=csound "$(FilePath)" -o$(FilePath).wav -+msg_color=0 && python /home/mkg/csound-extended/post-process.py $(FilePath).wav
 
 # Always run pdflatex to compile LaTeX.
 
