--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -736,6 +736,8 @@ command.name.8.*=Render csd piece to soundfile and play
 command.8.*=csound "$(FilePath)" -o$(FilePath).wav -+msg_color=0 && audacity $(FilePath).wav
 command.name.9.*=Render csd piece to soundfile and post-process and play 
 command.9.*=csound "$(FilePath)" -o$(FilePath).wav -+msg_color=0 && python /home/mkg/csound-extended/post-process.py $(FilePath).wav
+command.name.10.*=Render orc+sco piece to audio
+command.10.*=csound "$(FileDir)/$(FileName).orc" "$(FileDir)/$(FileName).sco" -odac -+msg_color=0
 
 # Always run pdflatex to compile LaTeX.
 
