--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -712,7 +712,7 @@ command.name.1.*=Render C++ piece to audio
 command.1.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --audio PortAudio --device dac
 command.name.2.*=Render C++ piece to soundfile
 command.2.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound 
-command.name.3.*=Render C++ piece to soundfile and post-process
+command.namecd "$(FileDir)" && .3.*=Render C++ piece to soundfile and post-process
 command.3.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post
 command.name.4.*=Render C++ piece to soundfile and post-process and play 
 command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav audacity
@@ -737,8 +737,11 @@ command.8.*=csound "$(FilePath)" -o$(FilePath).wav -+msg_color=0 && audacity $(F
 command.name.9.*=Render csd piece to soundfile and post-process and play 
 command.9.*=csound "$(FilePath)" -o$(FilePath).wav -+msg_color=0 && python /home/mkg/csound-extended/post-process.py $(FilePath).wav
 command.name.10.*=Render orc+sco piece to audio
-command.10.*=csound "$(FileDir)/$(FileName).orc" "$(FileDir)/$(FileName).sco" -odac -+msg_color=0
-
+command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" -odac -+msg_color=0
+command.name.11.*=Render orc+sco piece to soundfile and play
+command.11.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" -o"$(FileNameExt).wav" -+msg_color=0 && audacity "$(FileNameExt).wav"
+command.name.12.*=Test patch file to soundfile and play
+command.12.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" && audacity "$(FileNameExt).wav"
 # Always run pdflatex to compile LaTeX.
 
 command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interaction=nonstopmode $(FileNameExt)
