Render soundfiles outside Dropbox folder (#117).

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -726,22 +726,24 @@ command.5.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/
 command.name.6.*=Build Csound C++ plugin opcode (debug)
 command.6.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include     -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/include/csound -lGamma -lCsoundAC -lsndfile -lgc -lpthread -ldl -lm
 
-# Custom commands for running Csound to dac or soundfile with or without post-processing.
-# It is assumed that the csd filename + .wav becomes the output soundfile and that the root 
-# of the csd filename, with - or _ replaced by spaces, is the title of the piece.
+# Custom commands for running Csound to dac or soundfile with or without 
+# post-processing. It is assumed that the csd filename + .wav becomes the 
+# output soundfile and that the root of the csd filename, with - or _ replaced 
+# by spaces, is the title of the piece. Soundfiles are written to /tmp so as 
+# not to end up on Dropbox.
 
 command.name.7.*=Render csd piece to audio
-command.7.*=csound "$(FilePath)" -odac -+msg_color=0
+command.7.*=cd "$(FileDir)" && csound "$(FileNameExt)" -odac -m163 -+msg_color=0
 command.name.8.*=Render csd piece to soundfile and play
-command.8.*=csound "$(FilePath)" -o$(FilePath).wav -+msg_color=0 && audacity $(FilePath).wav
+command.8.*=cd "$(FileDir)" && csound "$(FileNameExt)" -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
 command.name.9.*=Render csd piece to soundfile and post-process and play 
-command.9.*=csound "$(FilePath)" -o$(FilePath).wav -+msg_color=0 && python /home/mkg/csound-extended/post-process.py $(FilePath).wav
+command.9.*=cd "$(FileDir)" && csound "$(FileNameExt)" -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && python /home/mkg/csound-extended/post-process.py "/tmp/$(FileNameExt).wav"
 command.name.10.*=Render orc+sco piece to audio
-command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" -odac -+msg_color=0
+command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" -odac -m163 -+msg_color=0
 command.name.11.*=Render orc+sco piece to soundfile and play
-command.11.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" -o"$(FileNameExt).wav" -+msg_color=0 && audacity "$(FileNameExt).wav"
+command.11.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
 command.name.12.*=Test patch file to soundfile and play
-command.12.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" && audacity "$(FileNameExt).wav"
+command.12.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" && audacity "/tmp/$(FileNameExt).wav"
 # Always run pdflatex to compile LaTeX.
 
 command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interaction=nonstopmode $(FileNameExt)
