--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -733,15 +733,15 @@ command.6.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/
 # not to end up on Dropbox.
 
 command.name.7.*=Render csd piece to audio
-command.7.*=cd "$(FileDir)" && csound "$(FileNameExt)" -odac -m163 -+msg_color=0
+command.7.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -odac -m163 -+msg_color=0
 command.name.8.*=Render csd piece to soundfile and play
-command.8.*=cd "$(FileDir)" && csound "$(FileNameExt)" -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
+command.8.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
 command.name.9.*=Render csd piece to soundfile and post-process and play 
-command.9.*=cd "$(FileDir)" && csound "$(FileNameExt)" -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && python /home/mkg/csound-extended/post-process.py "/tmp/$(FileNameExt).wav"
+command.9.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && python /home/mkg/csound-extended/post-process.py "/tmp/$(FileNameExt).wav"
 command.name.10.*=Render orc+sco piece to audio
-command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" -odac -m163 -+msg_color=0
+command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -odac -m163 -+msg_color=0
 command.name.11.*=Render orc+sco piece to soundfile and play
-command.11.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
+command.11.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
 command.name.12.*=Test patch file to soundfile and play
 command.12.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" && audacity "/tmp/$(FileNameExt).wav"
 # Always run pdflatex to compile LaTeX.
