--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -743,9 +743,9 @@ command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --sim
 command.name.11.*=Render orc+sco piece to soundfile and play
 command.11.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
 command.name.12.*=Test patch file to soundfile 
-command.12.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)"
-command.name.13.*=Test patch file to soundfile and play
-command.13.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" && audacity "/tmp/$(FileNameExt).wav"
+command.12.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-o/tmp/$(FileNameExt).wav"
+command.name.13.*=Test patch file to audio
+command.13.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-odac"
 # Always run pdflatex to compile LaTeX.
 
 command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interaction=nonstopmode $(FileNameExt)
