--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -14,6 +14,7 @@ position.maximize=1
 split.vertical=1
 output.horizontal.size=200
 output.vertical.size=1000
+output.scroll=2
 output.initial.hide=1
 tabbar.visible=1
 tabbar.multiline=1
