Adding help for real-time audio.

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -244,10 +244,10 @@ scriptol smalltalk sorcins spice specman \
 tacl tal txt2tags verilog vhdl
 import *
 
-font.monospace=font:!Bitstream Vera Sans Mono,size:11
+font.monospace=font:!Bitstream Vera Sans Mono,size:18
 font.base=$(font.monospace)
-font.small=$(font.monospace),size:11
-font.comment=$(font.monospace),size:11,italic
+font.small=$(font.monospace)
+font.comment=$(font.monospace)
 font.text=$(font.monospace)
 font.text.comment=$(font.monospace)
 font.embedded.base=$(font.monospace)
@@ -257,10 +257,6 @@ font.vbs=$(font.monospace)
 lexer.errorlist.value.separate=1
 
 ## CUSTOMIZATION OF VISUAL THEME
-
-
-
-
 
 ## CUSTOMIZATION OF GO AND TOOL COMMANDS
 
