--- a/docs/package.json
+++ b/docs/package.json
@@ -1,13 +1,13 @@
 {
-  "main": "scrims.html",
-  "name": "scrims",
+  "main": "player.html",
+  "name": "player",
   "description": "HTML5 with Csound",
   "version": "0.1.0",
   "keywords": [ "Csound", "node-webkit" ],
   "nodejs": true,
   "node-remote": "http://<all-urls>/*",
   "window": {
-    "title": "scrims",
+    "title": "player",
     "icon": "link.png",
     "toolbar": false,
     "frame": false,
