--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -693,7 +693,7 @@ keywords3.$(file.patterns.csound)=$(csound_other_keywords)
 
 comment.block.csound=;
 
-command.go.*.inc=python /home/mkg/csound-extended/silencio/patches/hear_patch.py $(FileName) 
+command.go.*.inc=python /home/mkg/csound-extended/silencio/patches/patch_calibrator.py $(FileName) 
 command.go.subsystem.*.inc=0
 
 command.go.*.csd=csound "$(FilePath)" -+msg_color=0
@@ -742,7 +742,7 @@ command.11.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --sim
 command.name.12.*=Test patch file to soundfile 
 command.12.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-o/tmp/$(FileNameExt).wav"
 command.name.13.*=Test patch file to audio
-command.13.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-odac"
+command.13.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-odac:plughw:1,0"
 # Always run pdflatex to compile LaTeX.
 
 command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interaction=nonstopmode $(FileNameExt)
