Corrected Doxygen comments for VoiceleadingNode.

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -719,9 +719,9 @@ command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/i
 # If other libraries turn out to be needed just stick them on the link line here.
 
 command.name.5.*=Build Csound C++ plugin opcode (release)
-command.5.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -O3 -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/include/csound -lGamma -lCsoundAC -lsndfile -lgc -lpthread -ldl -lm
+command.5.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -O3 -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
 command.name.6.*=Build Csound C++ plugin opcode (debug)
-command.6.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include     -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/include/csound -lGamma -lCsoundAC -lsndfile -lgc -lpthread -ldl -lm
+command.6.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include     -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
 
 # Custom commands for running Csound to dac or soundfile with or without 
 # post-processing. It is assumed that the csd filename + .wav becomes the 
@@ -730,13 +730,13 @@ command.6.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/
 # not to end up on Dropbox.
 
 command.name.7.*=Render csd piece to audio
-command.7.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -odac -m163 -+msg_color=0
+command.7.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -odac:plughw:1,0 -m163 -+msg_color=0
 command.name.8.*=Render csd piece to soundfile and play
 command.8.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
 command.name.9.*=Render csd piece to soundfile and post-process and play 
 command.9.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && python /home/mkg/csound-extended/post-process.py "/tmp/$(FileNameExt).wav"
 command.name.10.*=Render orc+sco piece to audio
-command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -odac -m163 -+msg_color=0
+command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -odac:plughw:1,0 -m163 -+msg_color=0
 command.name.11.*=Render orc+sco piece to soundfile and play
 command.11.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
 command.name.12.*=Test patch file to soundfile 
