--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -704,24 +704,24 @@ command.subsystem.*.csd=2
 # If other libraries turn out to be needed just stick them on the link line here.
 
 command.name.0.*=Build C++ piece
-command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm
+command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm
 command.name.1.*=Render C++ piece to audio
-command.1.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --audio PortAudio --device dac
+command.1.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --audio PortAudio --device dac
 command.name.2.*=Render C++ piece to soundfile
-command.2.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound 
+command.2.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound 
 command.namecd "$(FileDir)" && .3.*=Render C++ piece to soundfile and post-process
-command.3.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post
+command.3.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post
 command.name.4.*=Render C++ piece to soundfile and post-process and play 
-command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav audacity
+command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav audacity
 
 # Custom commands for building a C++ plugin opcode for Csound.
 # Each plugin must be one C++ file; this is not much of a limitation.
 # If other libraries turn out to be needed just stick them on the link line here.
 
 command.name.5.*=Build Csound C++ plugin opcode (release)
-command.5.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -O3 -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
+command.5.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -O3 -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
 command.name.6.*=Build Csound C++ plugin opcode (debug)
-command.6.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include     -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
+command.6.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include     -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
 
 # Custom commands for running Csound to dac or soundfile with or without 
 # post-processing. It is assumed that the csd filename + .wav becomes the 
