Reverting to native float (#145).

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -703,8 +703,8 @@ command.subsystem.*.csd=2
 # Each piece must be one C++ file; this is not much of a limitation.
 # If other libraries turn out to be needed just stick them on the link line here.
 
-command.name.0.*=Build C++ piece
-command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -I/usr/include -I/usr/include/eigen3 -O2 -g3 -gdwarf-3 -DDEBUG "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm
+command.name.0.*=Build C++ piece for debug
+command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -I/usr/include -I/usr/include/eigen3 -g3 -gdwarf-3 -DDEBUG "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm
 command.name.1.*=Render C++ piece to audio
 command.1.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --audio PortAudio --device dac
 command.name.2.*=Render C++ piece to soundfile
