Further integration of ChordSpace refactoring (#144 #145).

--- a/docs/package.json
+++ b/docs/package.json
@@ -1,13 +1,13 @@
 {
-  "main": "HarmonyIfs.html",
-  "name": "HarmonyIfs",
+  "main": "scrims.html",
+  "name": "scrims",
   "description": "HTML5 with Csound",
   "version": "0.1.0",
   "keywords": [ "Csound", "node-webkit" ],
   "nodejs": true,
   "node-remote": "http://<all-urls>/*",
   "window": {
-    "title": "HarmonyIfs",
+    "title": "scrims",
     "icon": "link.png",
     "toolbar": false,
     "frame": false,
@@ -17,5 +17,8 @@
   },
   "webkit": {
     "plugin": true
+  },
+  "chromium-args": {
+    "--device-scale-factor": 4
   }
 }
