Moved to Python 3.9 for musx.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,7 +122,7 @@ find_package(LLVM)
 find_package(OpenCV REQUIRED)
 find_package(PORTSMF)
 find_package(PNG)
-find_package(Python3 COMPONENTS Interpreter Development)
+find_package(Python3 "3.6" COMPONENTS Interpreter Development)
 find_package(SWIG)
 include(UseSWIG)
 find_package(STK)
