--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -712,7 +712,7 @@ command.2.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/i
 command.namecd "$(FileDir)" && .3.*=Render C++ piece to soundfile and post-process
 command.3.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post
 command.name.4.*=Render C++ piece to soundfile and post-process and play 
-command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav audacity
+command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.5m -I/usr/include/luajit-2.1 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lluajit-5.1 -lpython3.5m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav sweep
 
 # Custom commands for building a C++ plugin opcode for Csound.
 # Each plugin must be one C++ file; this is not much of a limitation.
