--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -244,7 +244,7 @@ scriptol smalltalk sorcins spice specman \
 tacl tal txt2tags verilog vhdl
 import *
 
-font.monospace=font:!Bitstream Vera Sans Mono,size:12
+font.monospace=font:!Courier New,size:12
 font.base=$(font.monospace)
 font.small=$(font.monospace)
 font.comment=$(font.monospace)
